--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,7 +7,10 @@
     action="/blogs/<%= blog._id %>?_method=PUT"
     method="POST"
   >
-    <!-- Here, adding "/... blog._id %>", and changing the method to "PUT", it submits. BUT, it submits the form doing a GET request, so we get it as a "Query String" in the URL bar. This is why we change it to "POST" -->
+    <!-- Method Override: Here, adding "/... blog._id %>", and changing 
+      the method to "PUT", it submits. BUT, it submits the form doing a 
+      GET request, so we get it as a "Query String" in the URL bar. 
+      This is why we change it to "POST" -->
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <div class="field">
       <label for="/">Title</label>
