--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="ui main text container">
   <div class="ui huge header">
-    <h1>RESTful Blog App</h1>
+    <h2>Popular posts</h2>
   </div>
   <div class="ui top attached segment">
     <div class="ui divided items">
@@ -16,6 +16,9 @@
           <a href="/blogs/<%= blog._id %>" class="header"><%=blog.title%></a>
           <div class="meta">
             <span><%= blog.created.toDateString() %></span>
+          </div>
+          <div class="description">
+            <p><em>Submitted by <%= blog.author.username %></em></p>
           </div>
           <div class="description">
             <p><%- blog.body.substring(0, 100) %>...</p>
