--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,25 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeLab</title>
+    <title>Coding Lab</title>
+
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
+
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
   </head>
 
   <body>
     <div class="ui inverted menu">
-      <div class="header item"><i class="code icon"></i>CodeLab</div>
+      <div class="header item"><i class="code icon large"></i>Coding Lab</div>
       <a href="/" class="item">Home</a>
       <a href="/blogs/new" class="item">New Post</a>
       <div class="right menu">
-        <a href="/register" class="item">Sign Up</a>
-        <a href="/login" class="item">Login</a>
-        <a href="/" class="item">Log Out</a>
+        <% if(!currentUser){ %>
+        <li>
+          <a href="/register" class="item"
+            ><i class="user plus icon large"></i>Sign Up</a
+          >
+        </li>
+        <li>
+          <a href="/login" class="item"
+            ><i class="sign in alternate icon large"></i>Login</a
+          >
+        </li>
+        <% } else { %>
+        <li>
+          <a href="/dashboard" class="item"
+            ><i class="user icon large"></i> <%=currentUser.username %></a
+          >
+        </li>
+        <li>
+          <a href="/logout" class="item"
+            ><i class="sign out alternate icon large"></i>Log Out</a
+          >
+        </li>
+        <% } %>
       </div>
+    </div>
+
+    <div class="ui container">
+      <% if(warning && warning.length > 0) { %>
+      <div class="ui negative message">
+        <div class="header">
+          <%= warning %>
+        </div>
+      </div>
+      <% } %> <% if(success && success.length > 0) { %>
+      <div class="ui green message">
+        <div class="header">
+          <%= success %>
+        </div>
+      </div>
+      <% } %>
     </div>
   </body>
 </html>
