--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,24 +1,56 @@
 <%- include ("./partials/header") %>
 
-<div class="ui container">
-  <h1>Sign Up</h1>
-  <form action="/register" method="POST">
-    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" name="username" placeholder="Username" />
+<div class="ui one column stackable center aligned page grid">
+  <div class="column seven wide">
+    <div class="header item">
+      <h3><i class="code icon small"></i> Coding Lab</h3>
     </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        name="password"
-        placeholder="Password"
-        class="form-control"
-      />
+    <div class="ui segment">
+      <div class="ui form">
+        <h2>Sign Up</h2>
+        <form action="/register" method="POST">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+          <div class="row">
+            <div class="field">
+              <label>Username</label>
+              <div class="ui input focus">
+                <input placeholder="Username" type="text" name="username" />
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="field">
+              <label>Email</label>
+              <div class="ui input focus">
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="Email"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="field">
+              <label>Password</label>
+              <div class="ui input focus">
+                <input type="password" name="password" placeholder="Password" />
+              </div>
+            </div>
+          </div>
+          <div class="inline field">
+            <div class="ui checkbox">
+              <input type="checkbox" />
+              <label>I agree to the terms and conditions</label>
+            </div>
+          </div>
+          <button class="ui button">Sign Up</button>
+        </form>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary">Sign Up</button>
-  </form>
+    <p>Already on Coding Lab? <a href="/login"> Log in</a></p>
+  </div>
 </div>
 
 <%- include ("./partials/footer") %>
