--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,22 @@
+html {
+  height: 100%;
+}
+
+body {
+  background: #8e9eab; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #eef2f3,
+    #8e9eab
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #eef2f3,
+    #8e9eab
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  min-height: 100%;
+}
+
 i.icon {
   font-size: 2em;
 }
@@ -8,4 +27,31 @@ i.icon {
 
 #delete {
   display: inline;
+}
+
+.row {
+  padding-bottom: 2rem;
+}
+
+.ui[class*="center aligned"].grid {
+  padding-top: 2rem;
+}
+
+.description {
+  padding-bottom: 0.8rem;
+}
+
+.ui.vertical.footer {
+  margin-top: 5rem;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
 }
