--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,12 @@
             <div class="field">
               <label>Username</label>
               <div class="ui input focus">
-                <input placeholder="Username" type="text" name="username" />
+                <input
+                  placeholder="Username"
+                  type="text"
+                  name="username"
+                  required
+                />
               </div>
             </div>
           </div>
@@ -22,11 +27,16 @@
             <div class="field">
               <label>Password</label>
               <div class="ui input focus">
-                <input type="password" name="password" placeholder="Password" />
+                <input
+                  type="password"
+                  name="password"
+                  placeholder="Password"
+                  required
+                />
               </div>
             </div>
           </div>
-          <button class="ui button">Login</button>
+          <button class="ui button" type="submit">Login</button>
         </form>
       </div>
     </div>
