--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,12 @@
             <div class="field">
               <label>Username</label>
               <div class="ui input focus">
-                <input placeholder="Username" type="text" name="username" />
+                <input
+                  placeholder="Username"
+                  type="text"
+                  name="username"
+                  required
+                />
               </div>
             </div>
           </div>
@@ -22,12 +27,7 @@
             <div class="field">
               <label>Email</label>
               <div class="ui input focus">
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  placeholder="Email"
-                />
+                <input type="email" name="email" placeholder="Email" required />
               </div>
             </div>
           </div>
@@ -35,7 +35,12 @@
             <div class="field">
               <label>Password</label>
               <div class="ui input focus">
-                <input type="password" name="password" placeholder="Password" />
+                <input
+                  type="password"
+                  name="password"
+                  placeholder="Password"
+                  required
+                />
               </div>
             </div>
           </div>
@@ -45,7 +50,7 @@
               <label>I agree to the terms and conditions</label>
             </div>
           </div>
-          <button class="ui button">Sign Up</button>
+          <button class="ui button" type="submit">Sign Up</button>
         </form>
       </div>
     </div>
