--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <%- include ("partials/header") %>
 
 <div class="ui main text container">
+  <div class="header item" id="header">
+    <h2><i class="code icon large"></i> Coding Lab</h2>
+  </div>
   <div class="ui huge header">
     <h2>Popular posts</h2>
   </div>
