--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,16 @@ i.icon {
   margin-top: 7em;
 }
 
+#header h2 {
+  text-align: center;
+  font-size: 1.8em;
+}
+
+/* #header i.icon {
+  font-size: 1.5em;
+  text-align: center;
+} */
+
 #delete {
   display: inline;
 }
